--- a/client/style.css
+++ b/client/style.css
@@ -5,26 +5,25 @@
 }
 
 	#container h1 {
+		margin: 30px 0px 20px 0px;
 		text-align: center;
 		font-size: 400%;
-		margin: 30px 0px 20px 0px;
+		color: #000;
+		text-shadow: #ddd 0px 2px;
 	}
 
-		#container h1 a {
-			text-decoration: none;
-			color: #000;
+		#container h1 span {
+			margin-left: 3px;
+			padding: 2px 5px 4px 7px;
+			background: red;
+			color: white;
+			border-top-left-radius: 15px 50%;
+			border-top-right-radius: 15px 50%;
+			border-bottom-left-radius: 15px 50%;
+			border-bottom-right-radius: 15px 50%;
+			box-shadow: 0px 5px #B90000;
+			text-shadow: rgba(0,0,0,0.5) -1px 0, rgba(0,0,0,0.3) 0 -1px, rgba(255,255,255,0.5) 0 1px, rgba(0,0,0,0.3) -1px -1px;
 		}
-
-			#container h1 a span {
-				background: red;
-				color: white;
-				border-top-left-radius: 15px 50%;
-				border-top-right-radius: 15px 50%;
-				border-bottom-left-radius: 15px 50%;
-				border-bottom-right-radius: 15px 50%;
-				margin-left: 3px;
-				padding: 0px 5px;
-			}
 
 	#room-selector {
 		width: 300px;
